Basic testing in place

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ sourceSets {
     test.resources.srcDirs = ['testresources']
 }
 
+test {
+    useJUnitPlatform()
+}
+
 repositories {
     jcenter()
     maven { url 'https://kotlin.bintray.com/ktor' }
@@ -48,6 +52,8 @@ dependencies {
     testCompile "io.ktor:ktor-server-sessions:$ktor_version"
     testCompile "io.ktor:ktor-client-core:$ktor_version"
     testCompile "io.ktor:ktor-client-jetty:$ktor_version"
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.1.0')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.1.0')
 }
 
 kotlin.experimental.coroutines = 'enable'
