--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile "io.ktor:ktor-server-sessions:$ktor_version"
     compile "io.ktor:ktor-client-core:$ktor_version"
     compile "io.ktor:ktor-client-jetty:$ktor_version"
+    compile "io.ktor:ktor-gson:$ktor_version"
     compile group: 'com.google.code.crawler-commons', name: 'crawler-commons', version: '0.5'
     compile 'org.jsoup:jsoup:1.11.3'
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
@@ -54,6 +55,7 @@ dependencies {
     testCompile "io.ktor:ktor-server-sessions:$ktor_version"
     testCompile "io.ktor:ktor-client-core:$ktor_version"
     testCompile "io.ktor:ktor-client-jetty:$ktor_version"
+
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.1.0')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.1.0')
 }
